# dicom2dce

./: .gitignore  LICENSE  README.md  __init__.py  analyze_low_entry_folders.py  check_filtered_consistency.py  config.json  config_params.json  config_paths.yaml  config_paths.yaml.example  consistency_checker.py  dce_filter.py  dicom_reader.py  main.py  manual_review.py  nifti_converter.py  nifti_validator.py  post_manual_processor.py  process_dicom.py  pyproject.toml  readme_filter.md
pipeline/: __init__.py  config.py  stage1_extractor.py  stage2_filter.py  stage3_dcmconsistency.py  stage4_niiconvert.py  stage5_niivalidate.py  stage6_report.py
