[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dicom2dce"
version = "0.1.0"
description = "DICOM extraction, DCE filtering, and NIfTI conversion pipeline"
requires-python = ">=3.9"
dependencies = [
    "pydicom",
    "nibabel",
    "numpy",
    "tqdm",
    "pyyaml",
    "dcm2niix"
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
dicom2dce = "dicom2dce.main:main"
dicom2dce-review = "dicom2dce.manual_review:main"

[tool.setuptools.packages.find]
where = [".."]
include = ["dicom2dce*"]

[tool.setuptools.package-data]
dicom2dce = ["config_params.json", "config_paths.yaml"]
